*** 20010613_4 by jdc
* Added support for U_LINES_OPER_ONLY (capital U, not lowercase).



*** 20010613_3 by leeh
- commited hwy's patch to opers.txt


*** 20010613_2 by db
- stats r/g should be oper only



*** 20010613_1 by db
- added user mode O removed channel mode d



*** 20010611_3 by greg
check if the pid we read from PPATH is ourselves .. handles /restarts.

(thanks for pointing this out goes to Walter)


*** 20010611_2 by leeh
- do CHANMODE_E a different way.. we can *always* support them, just 
  ignoring clients doing mode +e, (not -e) and exempts on join..


*** 20010611_1 by leeh
- moved the "not approved on efnet section" up to where people
  will actually see it.. it was ok when it was just glines, but its
  grown significantly..
- moved LITTLE_I_LINES out of not-on-efnet section, I dont really think
  its a problem, and its a local decision anyway really


*** 20010610_2 by kreator
- added /usr/pkg and /usr/local paths for openssl detection since i have
  systems with those paths used for ssl - NetBSD, etc.


*** 20010610_1 by db
- moved LITTLE_I_LINES into "not supported" section *sigh*



*** 20010609_5 by db
- #ifdef'ed out features not approved on EFNet KNOCK and +e *sigh*



*** 20010609_4 by db
submitted by Walter Campbell
- igore of bogus TS should be in version string



*** 20010609_3 by jdc
* Removal of cipher priority information for config.h.  This isn't
  applicable anymore.



*** 20010609_2 by jdc
* Forgot to remove one extra line due to previous debugging session
  with Hwy.  Line 452 needed to be deleted.  Oops.



*** 20010609_1 by jdc
- Fixes for cipher autoselection.  Order of ciphers was wrong; they
  were being tested in order of best ("most secure") to worst.  The
  last match is always picked, which would've been DES/56 on most
  systems.
- BF/256 and BF/128 would've never been made available; #ifdef was actually
  a #ifndef (s_crypt.h).  Oops.



*** 20010608_3 by db
From Walter Campbell
